Deploy react app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://1-L-P.github.io/gift-card-bank",
-  "name": "Gift Card Bank",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
